sonar/ing-sonarqube.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-sonarqube
  namespace: sonar
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: sonar.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonar-sonarqube
            port: 
              number: 80
  - host: elastic.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonar-sonarqube
            port: 
              number: 9001
